--- a/test-materialize.html
+++ b/test-materialize.html
@@ -91,6 +91,9 @@
 					<div class="card-panel grey lighten-5 z-depth-1">
 						<h5>Legend and explainations</h5>
 						<p>this is some text ... dihf doihf doihf d oidhf so dfhod  doifhds s doifyys dfos dfidyf sodifys dof sodifys dofisdfso fosd gsodifgys dgopsd sdogisd gsdo gsd gsdo gsd gosd gs gsd og sdgoidyg sd gosdigys g sodfigysf godsf igf godigds fg dofigyd</p>
+						<h6 class="col s12">Select one or more countries to compare</h6>
+						<select id="selectGraph3" class="browser-default" onchange="selectOnChangeG3('selectGraph3')">
+						</select>
 					</div>
 				</div>
 				<div class="col s8">
