--- a/1st_graph.html
+++ b/1st_graph.html
@@ -12,6 +12,8 @@
 
   <!-- Create a div where the graph will take place -->
   <div id="graph_area"></div>
+  <select id="selectCountryFirstGraph" class="browser-default" onchange="newCountrySelected()">
+  </select>
 
 
   <!-- loading the js code -->
