--- a/test-materialize.html
+++ b/test-materialize.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="dv-project.css">
+	<link rel="stylesheet" href="darkTest.css">
 	<script src="https://d3js.org/d3.v6.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="materialize.css">-->
 	<meta name="author" content="Guerin Clement">
 	<meta name="author" content="Garnier Raphael">
 	<meta name="description" content="Jan 2022, Data Visulization project. Theme: How gov. policies impact Covid19 pandemic">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 	<div class="row"></div><br></div>
@@ -19,7 +21,7 @@
 		<div class="col s1">
 		</div>
 		<div class="col s10">
-			<div class="card-panel grey lighten-5 z-depth-1">
+			<div class="card-panel z-depth-1">
 				<h1>The impact of government policies on Covid19 pandemic</h1>
 				<h5>author: Garnier Raphael, Guerin Clement</h5>
 				<h6>date: January 14th 2022</h6>
@@ -28,40 +30,43 @@
 
 			<!-- selectors for graph -->
 			<div class="row">
-				<div class="input-field col s4">
-					<div class="card-panel grey lighten-5 z-depth-1">
+				<div class="col s4">
+					<div class="card-panel z-depth-1">
 						<h5 class="col s12">Country</h5>
-						<select id="selectCountry" class="browser-default" onchange="selectOnChange('selectCountry')">
-						</select>
+						<div class="box">
+						<select id="selectCountry" class="custom-select" onchange="selectOnChange('selectCountry')">
+						</select></div>
 					</div>
 				</div>
-				<div class="input-field col s4">
-					<div class="card-panel grey lighten-5 z-depth-1">
+				<div class="col s4">
+					<div class="card-panel z-depth-1">
 						<h5 class="col s12">Government policy</h5>
-						<select id="selectPolicy" class="browser-default" onchange="selectOnChange('selectPolicy')">
-						</select>
+						<div class="box">
+						<select id="selectPolicy" class="custom-select" onchange="selectOnChange('selectPolicy')">
+						</select></div>
 					</div>
 				</div>
-				<div class="input-field col s4">
-					<div class="card-panel grey lighten-5 z-depth-1">
+				<div class="col s4">
+					<div class="card-panel z-depth-1">
 						<h5 class="col s12">Covid factor</h5>
-						<select id="selectFactor" class="browser-default" onchange="selectOnChange('selectFactor')">
-						</select>
+						<div class="box">
+						<select id="selectFactor" class="custom-select" onchange="selectOnChange('selectFactor')">
+						</select></div>
 					</div>
-				</div>
+				</div> 
 			</div>
 			<div class="divider"></div></br></br>
 
 			<!-- first graph -->
 <!--			<div class="row">
 				<div class="col s12">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<h5>First Graph</h5>
 						<img class="responsive-img" src="preliminary-report/drawing1.png">
 					</div>
 				</div>
 				<div class="col s12">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<p class="text-justify">You can see here the date of the implementation of your selected policy during the pandemic. You can also see the number of daily death in European countries with highlight on your selected country. For every change on the selected policy in the selected country, you can see a mark on the graph. By hovering you can see the precise data related to the selected country. </p>
 					</div>
 				</div>
@@ -71,13 +76,13 @@
 			<! -- second graph -->
 <!--			<div class="row">
 				<div class="col s8">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<h5>Second Graph</h5>
 						<img class="responsive-img" src="preliminary-report/drawing1-1.png">
 					</div>
 				</div>
 				<div class="col s4">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<h5>Legend and explainations</h5>
 						<p>this is some text ... dihf doihf doihf d oidhf so dfhod  doifhds s doifyys dfos dfidyf sodifys dof sodifys dofisdfso fosd gsodifgys dgopsd sdogisd gsdo gsd gsdo gsd gosd gs gsd og sdgoidyg sd gosdigys g sodfigysf godsf igf godigds fg dofigyd</p>
 					</div>
@@ -88,16 +93,17 @@
 			<! -- third graph -->
 			<div class="row">
 				<div class="col s4">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<h5>Legend and explainations</h5>
 						<p>this is some text ... dihf doihf doihf d oidhf so dfhod  doifhds s doifyys dfos dfidyf sodifys dof sodifys dofisdfso fosd gsodifgys dgopsd sdogisd gsdo gsd gsdo gsd gosd gs gsd og sdgoidyg sd gosdigys g sodfigysf godsf igf godigds fg dofigyd</p>
-						<h6 class="col s12">Select one or more countries to compare</h6>
-						<select id="selectGraph3" class="browser-default" onchange="selectOnChangeG3('selectGraph3')">
-						</select>
+						<h6>Select one or more countries to compare</h6>
+						<div class="box">
+						<select id="selectGraph3" class="custom-select" onchange="selectOnChangeG3('selectGraph3')">
+						</select></div>
 					</div>
 				</div>
 				<div class="col s8">
-					<div class="card-panel grey lighten-5 z-depth-1">
+					<div class="card-panel z-depth-1">
 						<h5>Third Graph</h5>
 						<!--<img class="responsive-img" src="preliminary-report/drawing1-2.png">-->
 						<div id="third-graph"></div>
@@ -107,15 +113,16 @@
 
 
 
-
+ 
 
 
 		</div>
 		<div class="col s1">
+			 <button class="button" onclick="darkMode()"><object class="icon" data="data/icon.svg" width="30" height="30"></object></button>
 		</div>
 	</div>
 
 
-	<script src="dv-project.js"></script>
+	<script src="darkTest.js"></script>
 </body>
 </html>
