--- a/test-materialize.html
+++ b/test-materialize.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="darkTest.css">
+	<link rel="stylesheet" href="dv-project.css">
 	<script src="https://d3js.org/d3.v6.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -123,6 +123,6 @@
 	</div>
 
 
-	<script src="darkTest.js"></script>
+	<script src="dv-project.js"></script>
 </body>
 </html>
