--- a/dv-project.html
+++ b/dv-project.html
@@ -58,27 +58,36 @@
 			<div class="divider"></div></br></br>
 
 			<!-- first graph -->
-<!--			<div class="row">
+			<div class="row">
 				<div class="col s12">
 					<div class="card-panel z-depth-1">
-						<h5>First Graph</h5>
-						<img class="responsive-img" src="preliminary-report/drawing1.png">
+						<h5><span id="g1_title"></span></h5></br></br>
+						<!--<img class="responsive-img" src="preliminary-report/drawing1.png">-->
+						<div id="graph_area"></div>
 					</div>
 				</div>
 				<div class="col s12">
 					<div class="card-panel z-depth-1">
-						<p class="text-justify">You can see here the date of the implementation of your selected policy during the pandemic. You can also see the number of daily death in European countries with highlight on your selected country. For every change on the selected policy in the selected country, you can see a mark on the graph. By hovering you can see the precise data related to the selected country. </p>
+						<div class="row">
+							<div class="col s6">
+								<p class="text-justify"><span id="g1_legendTable"></span></p>
+							</div>
+							<div class="col s6">
+								<p class="text-justify">You can see here the date of the implementation of the different level of <span id="g1_policyName1"></span> policies during the pandemic. You can also see the number of daily death in some european countries with highlight on <span id="g1_countryName1"></span>. For every change in <span id="g1_policyName2"></span> in <span id="g1_countryName2"></span>, you can see a circle on the graph. By hovering the graph you can see the precise data and the policies applied at that time in <span id="g1_countryName3"></span>.</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="divider"></div></br>
+			<div class="divider"></div></br> 
 
-			<! -- second graph -->
-<!--			<div class="row">
+			<!-- second graph -->
+			<div class="row">
 				<div class="col s8">
 					<div class="card-panel z-depth-1">
 						<h5>Second Graph</h5>
-						<img class="responsive-img" src="preliminary-report/drawing1-1.png">
+						<!--<img class="responsive-img" src="preliminary-report/drawing1-1.png">-->
+						<div id="g2_graph_area"></div>
 					</div>
 				</div>
 				<div class="col s4">
@@ -90,21 +99,24 @@
 			</div>
 			<div class="divider"></div></br>
 
-			<! -- third graph -->
+			<!-- third graph -->
 			<div class="row">
 				<div class="col s4">
 					<div class="card-panel z-depth-1">
 						<h5>Legend and explainations</h5>
-						<p>this is some text ... dihf doihf doihf d oidhf so dfhod  doifhds s doifyys dfos dfidyf sodifys dof sodifys dofisdfso fosd gsodifgys dgopsd sdogisd gsdo gsd gsdo gsd gosd gs gsd og sdgoidyg sd gosdigys g sodfigysf godsf igf godigds fg dofigyd</p>
+						<p class="text-justify">This graph represent the impact of various <span id="g3_policy_name"></span> level on the number of new covid cases in <span id="g3_country_name"></span> for a period of 30 days. How to read this graph? This graph is separated in multiple sub-graphs, each one of them represent a different level of the policy (from lower to higher). For each sub-graph you see the evolution of new covid cases in percentage relatively to the first day of application of that policy. </br></br>The horizontal line indicate the amount of death on day 1, if the orange line goes under it means that the policy is effective.</br></br>WARNING : Ascending policy level might not be implemented chronologically</br></br><span id="g3_table"></span></br>You can also use the selector under to add another country to compare to the graph.</p>
 						<h6>Select one or more countries to compare</h6>
 						<div class="box">
-						<select id="selectGraph3" class="custom-select" onchange="selectOnChangeG3('selectGraph3')">
+						<select id="selectGraph3" class="custom-select" onchange="g3_selectChange('selectGraph3')">
 						</select></div>
 					</div>
 				</div>
 				<div class="col s8">
 					<div class="card-panel z-depth-1">
-						<h5>Third Graph</h5>
+						<div class="col s8">
+							<h5><span id="g3_title"></span></h5>
+						</div>
+						<div id="g3_legend" class="col s4"></div>
 						<!--<img class="responsive-img" src="preliminary-report/drawing1-2.png">-->
 						<div id="third-graph"></div>
 					</div>
@@ -113,7 +125,7 @@
 
 
 
- 
+  
 
 
 		</div>
@@ -124,5 +136,6 @@
 
 
 	<script src="dv-project.js"></script>
+	<script src="2nd_graph.js"></script>
 </body>
 </html>
