--- a/dv-project.html
+++ b/dv-project.html
@@ -136,6 +136,6 @@
 
 
 	<script src="dv-project.js"></script>
-	<script src="2nd_graph.js"></script>
+	<!--<script src="2nd_graph.js"></script>-->
 </body>
 </html>
