--- a/dv-project.html
+++ b/dv-project.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="materialize.css">-->
-	<meta name="author" content="Guerin Clement">
-	<meta name="author" content="Garnier Raphael">
+	<meta name="author" content="Clement Guerin">
+	<meta name="author" content="Raphael Garnier">
 	<meta name="description" content="Jan 2022, Data Visulization project. Theme: How gov. policies impact Covid19 pandemic">
 	<meta name="credits" content="Some code of the .css file has been taken from Bootstrap">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
 		</div>
 		<div class="col s10">
 			<div class="card-panel z-depth-1">
-				<h1>The impact of government policies on Covid19 pandemic</h1>
-				<h5>author: Garnier Raphael, Guerin Clement</h5>
+				<h1>The impact of government policies on the Covid-19 pandemic</h1>
+				<h5>Authors: Raphael Garnier, Clement Guerin</h5>
 				<h6>date: January 14th 2022</h6>
 				<p class="text-justify"></br>This work has been made for our project of data visualization. Its goal is to show the impact of the various policies each european government implemented during the Covid-19 pandemic. Please note that our data stops at January 14th 2022.</br>You can select one European country to highlight. By default France is selected. You can also select a government policy. By default face covering is selected. Finally you can select the factor you want to display. It can be the number of daily new cases, deaths, the population in public parks, at work, in public transport or in grocery shops. By default, daily new cases is selected.</p>
 			</div>
@@ -62,7 +62,8 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="card-panel z-depth-1">
-						<h5><span id="g1_title"></span></h5></br></br>
+						<h5><span id="g1_title"></span></h5>
+						<div id="g1_legend" class="col s4"></div>
 						<div id="graph_area"></div>
 					</div>
 				</div>
@@ -73,7 +74,7 @@
 								<p class="text-justify"><span id="g1_legendTable"></span></p>
 							</div>
 							<div class="col s6">
-								<p class="text-justify">You can see here the date of the implementation of the different levels of the <span id="g1_policyName1"></span> policy during the pandemic. You can also see the number of daily death in some european countries with highlight on <span id="g1_countryName1"></span>. For every change in any policy in <span id="g1_countryName2"></span>, you can see a circle on the graph. By hovering the graph you can see the precise data and the policies applied at that time in <span id="g1_countryName3"></span>. You can compare display the graph of another country by using the selector under.</p>
+								<p class="text-justify">You can see here the date of the implementation of the different levels of the <span id="g1_policyName1"></span> policy during the pandemic. You can also see the number of daily death in some european countries with highlight on <span id="g1_countryName1"></span>. For every change in any policy in <span id="g1_countryName2"></span>, you can see a circle on the graph. By hovering the graph you can see the precise data and the policies applied at that time in <span id="g1_countryName3"></span>. You can compare the graph of another country by using the selector under.</p>
 								<div class="box">
 								<select id="selectGraph1" class="custom-select" onchange="g1_selectChange('selectGraph1')">
 								</select></div>
@@ -89,7 +90,7 @@
 				<div class="col s8">
 					<div class="card-panel z-depth-1">
 						<h5><span id="g2_title"></span></h5>
-						<!--<img class="responsive-img" src="preliminary-report/drawing1-1.png">-->
+						<div id="g2_legend" class="col s4"></div>
 						<div id="g2_graph_area"></div>
 					</div>
 				</div>
@@ -116,7 +117,7 @@
 				<div class="col s4">
 					<div class="card-panel z-depth-1">
 						<h5>Legend and explainations</h5>
-						<p class="text-justify">This graph shows the impact of various <span id="g3_policy_name"></span> levels on the number of covid-related death (per milion) in <span id="g3_country_name"></span> for a period of 30 days.</br>This graph is separated in multiple sub-graphs, each of them showing a different level of the policy (from lower to higher). For each sub-graph you see the evolution of the number of covid-related deaths (per milion) in percentage relative to the first day of application of that policy level. Each graph shows the data for the first time this very policy level has been implemented. </br></br>The horizontal line indicates the amount of deaths on day 1: if the orange line goes under it means that the policy is effective.</br></br>WARNING : Even if the policy level is increasing from left to right on the graph, the policy levels may not have been implemented in chronological order</br></br><span id="g3_table"></span></br>You can use the selector under to add another country to compare to the graph.</p>
+						<p class="text-justify">This graph shows the impact of various <span id="g3_policy_name"></span> levels on the number of covid-related death (per milion) in <span id="g3_country_name"></span> for a period of 30 days.</br>This graph is separated in multiple sub-graphs, each of them showing a different level of the policy (from lower to higher). For each sub-graph you see the evolution of the number of covid-related deaths (per milion) in percentage relative to the first day of application of that policy level. Each graph shows the data for the first time this very policy level has been implemented. </br></br>The horizontal line indicates the amount of deaths on day 1: if the orange line goes under it means that the policy is effective.</br></br>WARNING : Even if the policy level is increasing from left to right on the graph, the policy levels may not have been implemented in chronological order by the gorvernments.</br></br><span id="g3_table"></span></br>You can use the selector under to add another country to compare to the graph.</p>
 						<h6>Select one country to compare</h6>
 						<div class="box">
 						<select id="selectGraph3" class="custom-select" onchange="g3_selectChange('selectGraph3')">
@@ -142,7 +143,7 @@
 
 		</div>
 		<div class="col s1">
-			 <button class="button" onclick="darkMode()"><object class="icon" data="data/icon.svg" width="30" height="30"></object></button>
+			 <button class="button" onclick="darkMode()"><img class="icon" src="data/icon.svg" width="30" height="30"></button>
 		</div>
 	</div>
 
@@ -152,5 +153,12 @@
 
 <!-- ADD A FOOTER FOR THE CREDITS !! -->
 
+<!-- 
+
+Data taken from the website at the adress : https://ourworldindata.org/coronavirus
+
+Hannah Ritchie, Edouard Mathieu, Lucas Rodés-Guirao, Cameron Appel, Charlie Giattino, Esteban Ortiz-Ospina, Joe Hasell, Bobbie Macdonald, Diana Beltekian and Max Roser (2020) - "Coronavirus Pandemic (COVID-19)". Published online at OurWorldInData.org. Retrieved from: 'https://ourworldindata.org/coronavirus' [Online Resource]
+
+-->
 
 </html>
