--- a/dv-project.html
+++ b/dv-project.html
@@ -146,19 +146,24 @@
 			 <button class="button" onclick="darkMode()"><img class="icon" src="data/icon.svg" width="30" height="30"></button>
 		</div>
 	</div>
-
+	<div class="divider"></div></br>
 
 	<script src="dv-project.js"></script>
 </body>
 
-<!-- ADD A FOOTER FOR THE CREDITS !! -->
+<footer>
+	<div class="row">
+		<div class="col s1"></div>
+		<div class="col s3">
+			<p>Author: Raphael Garnier and Clement Guerin<br>
+			<a href="mailto:raphael.garnier@edu.univ-paris13.fr">raphael.garnier@edu.univ-paris13.fr</a><br>
+			<a href="mailto:guerin.clement@edu.univ-paris13.fr">guerin.clement@edu.univ-paris13.fr</a></p>
+		</div>
+		<div class="col s7">
+			<p>Credits : <br>Data from : <a href="https://ourworldindata.org/coronavirus">https://ourworldindata.org/coronavirus</a><br>Hannah Ritchie, Edouard Mathieu, Lucas Rodés-Guirao, Cameron Appel, Charlie Giattino, Esteban Ortiz-Ospina, Joe Hasell, Bobbie Macdonald, Diana Beltekian and Max Roser (2020) - "Coronavirus Pandemic (COVID-19)". Published online at OurWorldInData.org. Retrieved from: 'https://ourworldindata.org/coronavirus' [Online Resource]</p>
+		</div>
+	</div>
 
-<!-- 
-
-Data taken from the website at the adress : https://ourworldindata.org/coronavirus
-
-Hannah Ritchie, Edouard Mathieu, Lucas Rodés-Guirao, Cameron Appel, Charlie Giattino, Esteban Ortiz-Ospina, Joe Hasell, Bobbie Macdonald, Diana Beltekian and Max Roser (2020) - "Coronavirus Pandemic (COVID-19)". Published online at OurWorldInData.org. Retrieved from: 'https://ourworldindata.org/coronavirus' [Online Resource]
-
--->
+</footer>
 
 </html>
